kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec: 
  selector:
    app: medisecure-db
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
