kubernetes/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
spec:
  selector:
    app: pgadmin
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 80
